WEB-288: [bugfix] vertical spacing/display, other tweaks
had to manually set 'display' to 'inline-block'

--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -1,18 +1,23 @@
 /* -- buttons -- */
 
-/* primary button */
+/* general/primary button */
 a.bulib-btn, button.bulib-btn {
+  display: inline-block;
   text-align: center;
   margin: var(--padding-small, 5px);
   padding: var(--padding-small, 5px) var(--padding-medium, 10px);
   color: var(--color-button-text, white);
   text-decoration: none;
   background-color: var(--color-button-background-dark,#1b598c);
-  border: 2px solid var(--color-button-text, white);
+  border: 2px solid var(--color-button-background-dark, white);
   border-radius: 4px;
   box-shadow: 0 1px 1px 0 var(--color-secondary-background-dark,rgba(0,0,0,.1));
 }
 a.bulib-btn:hover, button.bulib-btn:hover { filter: brightness(95%); }
+a.bulib-btn:hover, button.bulib-btn:hover { 
+  cursor: pointer;
+  filter: brightness(90%); 
+}
 
 /* secondary button */
 a.bulib-btn.btn-secondary, button.bulib-btn.btn-secondary {
